# RoboRTS-Sukuna

./: README.md  go.sh  hello.c  run.sh
devel/: .catkin  .rosinstall  _setup_util.py
devel/include/roborts_msgs/: ArmorDetectionAction.h  ArmorDetectionActionFeedback.h  ArmorDetectionActionGoal.h  ArmorDetectionActionResult.h  ArmorDetectionFeedback.h  (+33 more)
roborts_bringup/config/: look_ahead_param.yaml
roborts_bringup/launch/: dwa.launch  roborts.launch  roborts_stage.launch  static_tf.launch  test_plan.launch
roborts_bringup/maps/: icra2022.pgm  icra2022.yaml
roborts_bringup/rviz/: roborts.rviz
roborts_bringup/worlds/: icra2022.world
roborts_camera/: CMakeLists.txt
roborts_costmap/: CMakeLists.txt
roborts_costmap/config/: costmap_parameter_config_for_global_plan.prototxt
roborts_costmap/proto/: costmap_parameter_setting.pb.cc  costmap_parameter_setting.pb.h
roborts_costmap/src/: costmap_interface.cpp
roborts_decision/executor/: chassis_executor.h
roborts_detection/: CMakeLists.txt
roborts_detection/util/: cv_toolbox.h
roborts_dwa/: CMakeLists.txt  package.xml
roborts_dwa/launch/: local_planner.launch
roborts_dwa/src/: dwa_planner.cpp  dwa_planner_node.cpp
roborts_localization/: localization_node.cpp
roborts_msgs/: CMakeLists.txt
roborts_planning/global_planner/: global_planner_node.cpp  global_planner_node.h
roborts_test/: CMakeLists.txt  package.xml
roborts_test/a_star_planner/: a_star_planner.cpp  a_star_planner.h
roborts_test/include/roborts_test/: a_star_planner.h  global_planner_client.h  grbl.h  look_ahead_planner_server.h
roborts_test/launch/: run.launch
roborts_test/src/: a_star_planner.cpp  global_planner_client.cpp  grbl.cpp  look_ahead_planner_server.cpp
roborts_tracking/: CMakeLists.txt
(+99 files in other folders)
